# StarkJr_Unpacker

./: CMakeLists.txt  README.md  Unpacker.c  Unpacker.cpp  det_map.txt
inc/: Hit.h  HitBuilder.h  HitLinkDef.h  Sig.h  TimeSorter.h
ref/: TimeSort.c  X6ana.cc  plot_spectrum32.C
ref/TAnaX6/: LinkDef.h  TAnaX6.cc  TAnaX6.hh  midas2root.cxx
ref/inc/: TX6ana.hh  TX6raw.hh
src/: Hit.cxx  HitBuilder.cxx  Sig.cxx  TimeSorter.cxx
